--- a/donation.css
+++ b/donation.css
@@ -24,18 +24,34 @@
 }
 
 #tips {
-    margin-top: 5px;
-    text-align: center;
-    margin-left: 115px;
+    margin-top: -50px;
+    text-align: left;
+    margin-left: 1300px;
+}
+
+#tips2 {
+    margin-top: -90px;
+    text-align: left;
+    margin-left: 1250px;
+
 }
 
 #carouselExampleIndicators {
     margin-top: 80px;
+    margin-right: 80px;
 }
 
 #text {
-    margin-left: 20px;
-    margin-right: 20px;
+    text-align: left;
+    margin-top: 100px;
+    margin-left: 70px;
+    margin-right: 150px;
+}
+#text2 {
+    text-align: left;
+    margin-top: -5px;
+    margin-left: 70px;
+    margin-right: 150px;
 }
 .subnav {
     margin-left: 280px;
@@ -79,6 +95,10 @@
     display: inline-block;
 }
 
+.container {
+    margin-left: 190px;
+}
+
 #en {
     margin-left: 800px;
     margin-top: 10px;
@@ -92,16 +112,17 @@
 }
 
 #donationWallpaper {
-    margin-top: 0px;
-    margin-left: 100px;
+    margin-top: 50px;
+    margin-left: 200px;
     margin-bottom: 10px;
 }
 
 .needs-validation {
-    margin-top: 170px;
+    margin-top: 100px;
 }
 
 .footer {
+    margin-bottom: 10px;
     text-align: center;
 }
 
@@ -135,14 +156,21 @@
 #april {
     margin-top: -70px;
     margin-left: -370px;
+    margin-right: 40px;
+}
+
+#eventsHeader2 {
+    margin-left: 280px;
+    margin-top: 60px;
 }
 
 #eventsHeader {
-    margin-left: -170px;
+    margin-left: 330px;
+    margin-top: 60px;
 }
 
 #stayHome {
-    margin-left: 800px;
+    margin-left: 900px;
     margin-top: -300px;
 }
 
@@ -150,10 +178,49 @@
     margin-left: 470px;
 }
 
-#twitterButton {
-    /*It's not important*/
-}
-
 #googlePlusButton {
     margin-top: 2px;
+}
+
+#giveUsYourHelp {
+    margin-top: 50px;
+    margin-left: 280px;
+}
+
+#giveUsYourHelp2 {
+    margin-top: 50px;
+    margin-left: 280px;
+}
+
+.needs-validation {
+    margin-left: 50px;
+    margin-right: -200px;
+}
+
+#aboutUsHeader {
+    margin-left: 370px;
+    margin-top: 60px;
+
+}
+
+#aboutUsText {
+    margin-left: 150px;
+    margin-right: 1000px;
+}
+
+#aboutUsText2 {
+    margin-left: 150px;
+    margin-right: 1000px;
+}
+
+#contactUsHeader {
+    margin-left: 345px;
+    margin-top: 50px;
+    display: inline-block;
+}
+
+#contactUsText {
+    margin-left: 250px;
+    margin-top: 50px;
+    display: inline-block;
 }
