--- a/css/donation.css
+++ b/css/donation.css
@@ -67,7 +67,7 @@ nav {
 
 /* Link buttons colors */
 a:visited, a {
-    color: #679b9b!important;
+    color: #1e2b2b!important;
 }
 
 /* Carousel Back-Color*/
