--- a/css/donation.css
+++ b/css/donation.css
@@ -67,7 +67,7 @@ nav {
 
 /* Link buttons colors */
 a:visited, a {
-    color: #679b9b!important;
+    color: #1e2b2b!important;
 }
 
 /* Carousel Back-Color*/
@@ -132,7 +132,7 @@ p {
 
 /* Url Footer Color */
 .url {
-    color: #212529!important;
+    color: #1e2b2b!important;
 }
 
 /* Events header */
